--- a/.gitattributes
+++ b/.gitattributes
@@ -1,71 +1,174 @@
-## Unity ##
-*.cs diff=csharp text
-*.cginc text
-*.shader text
+# Treat everything not text if not specified
+# Avoid crlf messing up things like .asset and ProjectSettings (But we'd like to diff so we do not assign binary[-text -diff] tag)
+# You should never do line ending conversion on .asset, .asset could be CRLF(ProjectSettings) LF(Tile set config) or binary even if forced text(Lighting and Terrain Data)
+* -text
 
-*.mat merge=unityyamlmerge eol=lf
-*.anim merge=unityyamlmerge eol=lf
-*.unity merge=unityyamlmerge eol=lf
-*.prefab merge=unityyamlmerge eol=lf
-*.physicsMaterial2D merge=unityyamlmerge eol=lf
-*.physicMaterial merge=unityyamlmerge eol=lf
-*.asset merge=unityyamlmerge eol=lf
-*.meta merge=unityyamlmerge eol=lf
-*.controller merge=unityyamlmerge eol=lf
+# Unity visible meta is LF regardless of created platform
+*.meta text eol=lf
 
-# enforce unix style line endings
-*.ts text eol=lf
-*.md text eol=lf
-*.txt text eol=lf
-*.js text eol=lf
-*.json text eol=lf
-*.xml text eol=lf
-*.svg text eol=lf
-*.yaml text eol=lf
-*.css text eol=lf
-*.html text eol=lf
-*.py text eol=lf
+# All extensions are specified in lower cases
+# [git config core.ignorecase true] is assumed.
+# The projects are going to be developed across OSX and Windows, if we allow OSX user to commit file names only differ in capitalization.
+# These files will prevent Windows users to pull
 
-# do not enforce text for everything - it causes issues with random binary files
 
-*.sln text eol=crlf
+# Human authored code
+# Files with auto crlf conversion, auto crlf is painful to get right
+# But we need it to avoid committing files with all line endings changed by text editor
+# Such commit will cripple [git blame]
+# We decided to force lf across platforms now for adding code as source hash calculation input
+# And we'd like source code having the same binary across Windows and macOS so that the souce hash would be calculated the same
+*.cs         text eol=lf
+*.json       text eol=lf
 
-*.png binary
-*.jpg binary
-*.jpeg binary
+# ShaderLab
+*.cginc      text eol=lf
+*.shader     text eol=lf
 
-## git-lfs ##
+# Gradle property
+*.properties text eol=lf
 
-#Image
-*.gif filter=lfs diff=lfs merge=lfs -text
-*.psd filter=lfs diff=lfs merge=lfs -text
-*.ai filter=lfs diff=lfs merge=lfs -text
+# AndroidManifest and other XML files
+*.xml        text eol=lf
 
-#Audio
-*.mp3 filter=lfs diff=lfs merge=lfs -text
-*.wav filter=lfs diff=lfs merge=lfs -text
-*.ogg filter=lfs diff=lfs merge=lfs -text
+# iOS plugin possible extensions
+*.h          text eol=lf
+*.c          text eol=lf
+*.cpp        text eol=lf
+*.m          text eol=lf
+*.mm         text eol=lf
 
-#Video
-*.mp4 filter=lfs diff=lfs merge=lfs -text
-*.mov filter=lfs diff=lfs merge=lfs -text
+# NeXTSTEP property list
+*.plist      text eol=lf
 
-#3D Object
-*.FBX filter=lfs diff=lfs merge=lfs -text
-*.fbx filter=lfs diff=lfs merge=lfs -text
-*.blend filter=lfs diff=lfs merge=lfs -text
-*.obj filter=lfs diff=lfs merge=lfs -text
+# GitLab and other services config
+*.yml        text eol=lf
+*.toml       text eol=lf
 
-#ETC
-*.a filter=lfs diff=lfs merge=lfs -text
-*.exr filter=lfs diff=lfs merge=lfs -text
-*.tga filter=lfs diff=lfs merge=lfs -text
-*.pdf filter=lfs diff=lfs merge=lfs -text
-*.zip filter=lfs diff=lfs merge=lfs -text
-*.dll filter=lfs diff=lfs merge=lfs -text
-*.unitypackage filter=lfs diff=lfs merge=lfs -text
-*.aif filter=lfs diff=lfs merge=lfs -text
-*.ttf filter=lfs diff=lfs merge=lfs -text
-*.rns filter=lfs diff=lfs merge=lfs -text
-*.reason filter=lfs diff=lfs merge=lfs -text
-*.lxo filter=lfs diff=lfs merge=lfs -text
+# LFS
+# We intentionally NOT LFS tracking .prefab and .unity(Unity scene) in order to diff
+# We also intentionally not assign YAMLMerge as diff and merge to them, it does not work
+
+# Library
+*.dll         filter=lfs diff=lfs merge=lfs
+*.jar         filter=lfs diff=lfs merge=lfs
+*.aar         filter=lfs diff=lfs merge=lfs
+*.srcaar      filter=lfs diff=lfs merge=lfs
+*.so          filter=lfs diff=lfs merge=lfs
+*.lib         filter=lfs diff=lfs merge=lfs
+*.a           filter=lfs diff=lfs merge=lfs
+*.dylib       filter=lfs diff=lfs merge=lfs
+*.swiftmodule filter=lfs diff=lfs merge=lfs
+*.swiftdoc    filter=lfs diff=lfs merge=lfs
+*.bundle      filter=lfs diff=lfs merge=lfs
+
+# Debug information, really should not get committed into repository
+# Program database
+*.pdb filter=lfs diff=lfs merge=lfs
+# Program database for Mono
+*.mdb filter=lfs diff=lfs merge=lfs
+
+# Linking information, really should not get committed into repository
+*.ilk filter=lfs diff=lfs merge=lfs
+
+# Executable
+*.exe filter=lfs diff=lfs merge=lfs
+
+# Unity
+LightingData.asset filter=lfs diff=lfs merge=lfs
+*.cubemap          filter=lfs diff=lfs merge=lfs
+
+# Texture
+*.bmp     filter=lfs diff=lfs merge=lfs
+*.gif     filter=lfs diff=lfs merge=lfs
+*.png     filter=lfs diff=lfs merge=lfs
+*.jpg     filter=lfs diff=lfs merge=lfs
+*.jpeg    filter=lfs diff=lfs merge=lfs
+# Commiting PSD to Unity is not recommended (long import time)
+*.psd     filter=lfs diff=lfs merge=lfs
+*.ai      filter=lfs diff=lfs merge=lfs
+*.tga     filter=lfs diff=lfs merge=lfs
+*.tif     filter=lfs diff=lfs merge=lfs
+*.tiff    filter=lfs diff=lfs merge=lfs
+*.exr     filter=lfs diff=lfs merge=lfs
+*.hdr     filter=lfs diff=lfs merge=lfs
+*.svg     filter=lfs diff=lfs merge=lfs
+# GIMP eXperimental Computing Facility
+*.xcf     filter=lfs diff=lfs merge=lfs
+# Clip Studio Paint
+*.clip    filter=lfs diff=lfs merge=lfs
+# Substance
+*.sbs     filter=lfs diff=lfs merge=lfs
+*.spp     filter=lfs diff=lfs merge=lfs
+*.sbsar   filter=lfs diff=lfs merge=lfs
+# https://substance3d.adobe.com/documentation/bake/what-are-assbin-files-172824370.html
+*.assbin  filter=lfs diff=lfs merge=lfs
+
+
+# Shader
+# Unity shader graph, almost unreadable text file
+*.shadersubgraph filter=lfs diff=lfs merge=lfs
+
+# Model
+*.fbx   filter=lfs diff=lfs merge=lfs
+# 3ds Max
+*.max   filter=lfs diff=lfs merge=lfs
+# Maya
+*.ma    filter=lfs diff=lfs merge=lfs
+*.mb    filter=lfs diff=lfs merge=lfs
+# Wavefront .obj
+*.obj   filter=lfs diff=lfs merge=lfs
+# ZBrush
+*.ztl   filter=lfs diff=lfs merge=lfs
+*.zpr   filter=lfs diff=lfs merge=lfs
+# Blender
+*.blend filter=lfs diff=lfs merge=lfs
+
+# Audio
+*.aif  filter=lfs diff=lfs merge=lfs
+*.aiff filter=lfs diff=lfs merge=lfs
+*.mp3  filter=lfs diff=lfs merge=lfs
+*.wav  filter=lfs diff=lfs merge=lfs
+*.wma  filter=lfs diff=lfs merge=lfs
+*.ogg  filter=lfs diff=lfs merge=lfs
+# Wwise sound bank
+*.bnk  filter=lfs diff=lfs merge=lfs
+# Wwise work units .wwu and Wwise project .wproj are readable XML, not LFS for now
+
+# Animation
+# Spine animation binary export
+*.skel.bytes filter=lfs diff=lfs merge=lfs
+# Unity animation is serialized as text under Force Text but unreadable
+*.anim       filter=lfs diff=lfs merge=lfs
+# 3ds Max XML Animation File
+*.xaf        filter=lfs diff=lfs merge=lfs
+
+# Movie
+*.mp4 filter=lfs diff=lfs merge=lfs
+*.mov filter=lfs diff=lfs merge=lfs
+
+# Font
+*.ttf filter=lfs diff=lfs merge=lfs
+*.otf filter=lfs diff=lfs merge=lfs
+
+# Document
+*.doc  filter=lfs diff=lfs merge=lfs
+*.docx filter=lfs diff=lfs merge=lfs
+*.pdf  filter=lfs diff=lfs merge=lfs
+*.rtf  filter=lfs diff=lfs merge=lfs
+*.chm  filter=lfs diff=lfs merge=lfs
+
+# Spreadsheet
+*.xls  filter=lfs diff=lfs merge=lfs
+*.xlsx filter=lfs diff=lfs merge=lfs
+
+# Misc, consider remove them from repository
+*.7z           filter=lfs diff=lfs merge=lfs
+*.zip          filter=lfs diff=lfs merge=lfs
+*.rar          filter=lfs diff=lfs merge=lfs
+*.unitypackage filter=lfs diff=lfs merge=lfs
+*.nupkg        filter=lfs diff=lfs merge=lfs
+# 3ds Max plugin
+*.dlu          filter=lfs diff=lfs merge=lfs
+# SQLite database
+*.db           filter=lfs diff=lfs merge=lfs
