--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 /[Uu]ser[Ss]ettings/
 
 # Skybox FREE
-/[Aa]ssets/Fantasy Skybox FREE/
+#/[Aa]ssets/Fantasy Skybox FREE/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
